feat(workspace): support app reference search
